xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/txtSecondTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/txtMoney"
        android:inputType="numberSigned" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMoney"
        android:layout_marginTop="14dp"
        android:text="@string/txtAction"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:entries="@array/operationGroup"
        android:prompt="@string/prompt" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/btnCalculate" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/description"
        android:src="@drawable/piggy_bank" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCalculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

</RelativeLayout>
